# wayrandr

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
scripts/: regenerate_ui.sh
src/: constants.py  helpers.py  kanshi.py  main.py  monitors.py
src/ui/: __init__.py  main.py  monitor_info_widget.py  monitor_widget.py
wayrandr/: helpers.py  main.py  monitors.py
wayrandr/backend/: base.py  wlr_randr.py
wayrandr/gui/: __init__.py  main_window.py  monitor_info_widget.py  monitor_widget.py
wayrandr/gui/ui/generated_ui/: main_window.py  monitor_info_widget.py  monitor_widget.py
wayrandr/gui/ui/xml/: main_window.ui  monitor_info_widget.ui  monitor_widget.ui
wayrandr/ui/: __init__.py  main.py  monitor_info_widget.py  monitor_widget.py
